@@ -154,7 +154,7 @@ void CMainFrame::LoadDefaultDockers()
 void CMainFrame::PreCreate(CREATESTRUCT& cs)
 {
 	// Call the base class function first
-	CFrame::PreCreate(cs);
+	CDockFrame::PreCreate(cs);
 	
 	// Hide the window initially by removing the WS_VISIBLE style
 	cs.style &= ~WS_VISIBLE;
@@ -162,7 +162,7 @@ void CMainFrame::PreCreate(CREATESTRUCT& cs)
 
 BOOL CMainFrame::SaveRegistrySettings()
 {
-	if (CFrame::SaveRegistrySettings())
+	if (CDockFrame::SaveRegistrySettings())
 		return SaveDockRegistrySettings(GetRegistryKeyName());
 	else
 		return FALSE;
